# Proyecto5_equipo4_regresion

./: README.md  main.py  pyproject.toml
data/processed/: life_expect_clean.csv  life_expectancy_clean_shared.csv
models/: modelo_q3.pkl  modelo_q4.pkl  models_metadata.pkl
notebooks/complete/: version_completed.ipynb  version_final.ipynb
notebooks/partially/: 01_eda_joaquin.ipynb  02_eda_iris.ipynb  03_eda_mar.ipynb  04_eda_isa.ipynb
